# ComfyUI-Hunyuan3D-Part

./: README.md  comfy-test.toml  index.html  pyproject.toml  requirements.txt
dev/: index.html
dev/linux-cpu/: index.html  models.json  results.json
dev/linux-cpu/logs/: H3DPART-segment-partgen_resources.csv  H3DPART-segment_resources.csv
dev/linux-gpu/: index.html  models.json  results.json
dev/linux-gpu/logs/: H3DPART-segment-partgen_resources.csv  H3DPART-segment_resources.csv
dev/macos-cpu/: index.html  models.json  results.json
dev/macos-cpu/logs/: H3DPART-segment-partgen_resources.csv  H3DPART-segment_resources.csv
dev/windows-cpu/: index.html  models.json  results.json
dev/windows-cpu/logs/: H3DPART-segment-partgen_resources.csv  H3DPART-segment_resources.csv
dev/windows-gpu/: index.html  models.json  results.json
dev/windows-gpu/logs/: H3DPART-segment-partgen_resources.csv  H3DPART-segment_resources.csv
dev/windows-portable-cpu/: index.html  models.json  results.json
dev/windows-portable-gpu/: index.html  models.json  results.json
main/: index.html
main/linux-gpu/: index.html  models.json  results.json
main/windows-gpu/: index.html  results.json
main/windows-portable-gpu/: index.html  models.json  results.json
nodes/: bbox_io_nodes.py  bbox_visualization.py  comfy-env.toml  exploded_viewer.py  geometry_utils.py  image_utils.py  loaders.py  memory.py  mesh_io.py  misc_utils.py  p3sam_processing.py  processing.py  xpart_pipeline.py
nodes/hunyuan3d_part/: model.py  vae.py
nodes/sonata/: extractor.py  model.py  utils.py
(+22 files in other folders)
