[project]
name = "comfyui-hunyuan3d-part"
description = "Warning, uses experimental package `comfy-env` to attempt a one click isolated install. Will download and use pixi package manager. Hunyuan3D-Part nodes for ComfyUI: 3D part segmentation with P3-SAM and high-fidelity part generation with X-Part diffusion."
version = "0.1.18"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-Hunyuan3D-Part"

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "Hunyuan3D-Part"
Icon = "https://raw.githubusercontent.com/PozzettiAndrea/ComfyUI-Hunyuan3D-Part/main/assets/icon.png"
